--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/phone"
                 android:autoLink="phone"
-                android:layout_toRightOf="@+id/photo"
+                android:layout_toEndOf="@+id/photo"
                 android:layout_alignParentTop="true"
                 android:textSize="30sp"
                 />
@@ -36,9 +36,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
-                android:layout_toRightOf="@+id/photo"
+                android:layout_toEndOf="@+id/photo"
                 android:layout_below="@+id/phone"
                 />
+            <ImageButton
+                android:id="@+id/msg_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_message_24"
+                android:layout_toEndOf="@+id/name"
+                android:layout_alignParentRight="true"
+                />
+
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
